--- a/weibo.html
+++ b/weibo.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<script type="text/javascript" charset="utf-8">
 WB2.anyWhere(function(W){
     W.widget.publish({
         action:"pubilish",
@@ -25,6 +26,6 @@ WB2.anyWhere(function(W){
         id: "wb_publisher"
     });
 });
-
+</script>
 </body>
 </html>
