--- a/weibo.html
+++ b/weibo.html
@@ -22,7 +22,7 @@ WB2.anyWhere(function(W){
         uid:"2268133871",
         refer:"y",
         default_image:"",
-        appkey:"5WdPzR",
+        appkey:"3683296531",
         id: "wb_publisher"
     });
 });
