--- a/weibo.html
+++ b/weibo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:wb="http://open.weibo.com/wb"></html>
 <head>
 <meta http-equiv="Content-Type" content="text/html"  charset="utf-8" />
 
@@ -7,25 +7,12 @@
 
 <link rel="stylesheet" type="text/css" href="" />
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-<script src=http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=appkey type="text/javascript" charset="utf-8"></script>
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
+
 </head>
 
 <body>
-<script type="text/javascript" charset="utf-8">
-WB2.anyWhere(function(W){
-    W.widget.publish({
-        action:"pubilish",
-        type:"web",
-        language:"zh_cn",
-        button_type:"red",
-        button_size:"middle",
-        uid:"2268133871",
-        refer:"y",
-        default_image:"",
-        appkey:"3683296531",
-        id: "wb_publisher"
-    });
-});
-</script>
+
+<wb:publish action="publish" type="web" language="zh_cn" button_type="red" button_size="middle" uid="2268133871" refer="y" default_image="" appkey="5WdPzR" ></wb:publish>
 </body>
 </html>
