--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns:wb="http://open.weibo.com/wb"></html>
+<!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html"  charset="utf-8" />
-<meta http-equiv="refresh" content="0.1;url=http://weibo.com/liuyo">
-<title>遛哟网--创意、新奇、乐趣、慢节奏、享受生活！www.liuyo.com</title>
+<meta http-equiv="refresh" content="0.1;url=http://weidian.com/?userid=323088890">
+<title>遛哟网--创意、新奇、乐趣、慢节奏、享受生活！m.liuyo.com</title>
 </head>
 <body>
 </body>
